# PYPKG-MagicDoc

./: CHANGELOG.md  README.md  TODO.yaml  pyproject.toml
archive/: git.py  tf_nested_class.py  tf_single.py
magicdoc/: magicdoc.py  main.py
magicdoc/classes/: GitParser.py  Log.py  TFMagicDoc.py  terraform.py
magicdoc/commands/: tf.py
magicdoc/commands/tf_commands/: create.py  show.py
magicdoc/libs/: github.py  jinja.py  tfdoc.py  utils.py
magicdoc/libs/templates/: magicdoc_config.j2  tf_module_readme.j2
magicdoc/magicdoc_gen/: commands.py
magicdoc/magicdoc_show/: commands.py
magicdoc/modules/: tree.py
magicdoc/templates/: magicdoc_config.j2  magicdoc_tf_module_config.j2  magicdoc_tf_module_readme.j2
magicdoc_archive/libs/: config.py  github.py
magicdoc_archive/libs/templates/: magicdoc_changelog.j2  magicdoc_config.j2
magicdoc_archive/magicdoc_gen/: __init__.py  commands.py
magicdoc_archive/magicdoc_show/: commands.py
